# decibri

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  vitest.config.js
.cargo/: audit.toml  config.toml
.claude/: settings.local.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  feature_request.yml  issue_report.yml
.github/workflows/: check-upstream.yml  ci.yml  publish-crates.yml  publish-npm.yml  publish-pypi.yml  python-ci.yml  release-dryrun.yml  release.yml
bindings/node/: Cargo.toml  index.d.ts  index.js
bindings/node/src/: lib.rs
bindings/python/: CHANGELOG.md  Cargo.toml  MIGRATION_PYTHON.md  README.md  pyproject.toml
bindings/python/docs/: PUBLISH.md
bindings/python/docs/ecosystem/: docker.md  jupyter.md  multiprocessing.md
bindings/python/docs/ecosystem/docker/: Dockerfile.audio  Dockerfile.base  Dockerfile.headless
bindings/python/python/decibri/: __init__.py  __init__.pyi  _async_classes.py  _classes.py  _decibri.pyi  _ort_resolver.py  exceptions.py  exceptions.pyi
bindings/python/python/decibri/models/: README.md  fastenhancer_t.onnx
bindings/python/src/: lib.rs
bindings/python/tests/: conftest.py  test_agc.py  test_async.py  test_async_smoke.py  test_bridge_sendability.py  test_capture.py  test_config.py  test_dc_removal.py  test_denoise.py  test_error_messages.py  test_exceptions.py  test_file.py  test_fork_safety.py  test_highpass.py  test_lifecycle.py  test_lifecycle_leak.py  test_limiter.py  test_microphone_properties.py  test_numpy.py  test_numpy_smoke.py  test_ort_bundling.py  test_output.py  test_record_to_file.py  test_record_to_file_duration.py  test_repr.py  test_smoke.py  test_vad.py  test_wheel_smoke.py
crates/decibri/: CHANGELOG.md  Cargo.toml  MIGRATION.md  README.md  build.rs
crates/decibri/examples/: bench_vad.rs
crates/decibri/src/: backend.rs  capture.rs  denoise.rs  device.rs  error.rs  file.rs  gain.rs  lib.rs  microphone.rs  onnx.rs  output.rs  sample.rs  speaker.rs  stage.rs  vad.rs
crates/decibri/tests/: sealed_config_construction.rs  vad_integration.rs  vad_ort_load_failure.rs
docs/: features.md
examples/: wav-capture.js  websocket-server.js  websocket-stream.js
models/: README.md
npm/darwin-arm64/: package.json
npm/decibri/: CHANGELOG.md  MIGRATION.md  README.md  package-lock.json  package.json
npm/decibri-darwin-arm64/: package.json
npm/decibri-linux-arm64-gnu/: package.json
npm/decibri-linux-x64-gnu/: package.json
npm/decibri-win32-x64-msvc/: package.json
npm/decibri/examples/: README.md  browser-speaker-test.html  decibri.browser.js  wav-capture.js  websocket-server.js  websocket-stream.js
npm/decibri/src/: decibri-output.js  decibri.d.ts  decibri.js  errors.js
npm/decibri/src/browser/: decibri-browser.js  decibri-output-browser.js  emitter.js  index.d.ts  index.js  output-worklet-inline.js  output-worklet-processor.js  worklet-inline.js  worklet-processor.js
npm/linux-arm64-gnu/: package.json
npm/linux-x64-gnu/: package.json
npm/platform-darwin-arm64/: package.json
npm/platform-linux-arm64-gnu/: package.json
npm/platform-linux-x64-gnu/: package.json
npm/platform-win32-x64-msvc/: package.json
npm/win32-x64-msvc/: package.json
tests/: test-api.js  test-async-open.js  test-async-write-drain.js  test-capture.js  test-ci.js  test-denoise.js  test-file.js  test-output.js  test-vad-silero.js
tests/browser/: decibri-browser.test.js  decibri-output-browser.test.js  emitter.test.js  index.html  output-worklet-processor.test.js  resampler.test.js  worklet-processor.test.js
