[package]
name = "decibri-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
# Python extension module. `name = "_decibri"` makes cargo output
# `_decibri.{pyd,so}` matching `module-name = "decibri._decibri"` in
# pyproject.toml; maturin packages it into `python/decibri/_decibri.{pyd,so}`
# under the mixed-mode layout. Without this, cargo would output
# `decibri_python.{pyd,so}` (derived from crate name) and maturin would
# have to rename during wheel packaging.
#
# `cdylib` only. `rlib` would let other Rust crates depend on us; we're a
# terminal binding crate, so cdylib is the sole output.
name = "_decibri"
crate-type = ["cdylib"]

[dependencies]
# Dual path+version dep: path wins for workspace dev (no crates.io round-trip),
# version pins for eventual registry publish if we ever ship this standalone.
# Matches the polars-style convention.
#
# IMPORTANT: do NOT add a `features = [...]` override here without matching
# changes in `bindings/node/Cargo.toml`. Cargo's workspace resolver unifies
# features across both bindings silently; diverging overrides produce a build
# that neither binding tests in isolation. Both bindings inherit decibri's
# default features (capture, playback, vad, denoise, gain, ort-load-dynamic).
decibri = { version = "5.1", path = "../../crates/decibri" }

# PyO3 0.29 line (MSRV 1.83, below the workspace 1.88 floor, so headroom is
# preserved). Bumped from 0.28 to take the RUSTSEC-2026-0176 and -0177 fixes,
# which land only in >=0.29.0 (no 0.28 backport); the bump is internal-only
# (abi3-py310 floor and the public surface are unchanged).
#
# Feature choices (all three required for cross-platform abi3 extension crates):
#
# - `abi3-py310`: targets the Python stable ABI at the 3.10 floor. One wheel
#   per platform serves 3.10 through 3.14 and is forward-compatible with
#   future CPython versions.
#
# - `extension-module`: tells pyo3 we're building an importable module, not
#   embedding a Python interpreter. Skips linking libpython on Linux (lazy
#   symbol resolution at import time).
#
# - `generate-import-lib`: the canonical pattern for cross-platform abi3 on
#   Windows. Pulls in `python3-dll-a` as a build dep, which synthesizes
#   `python3.lib` at build time from the abi3 ABI definition without needing
#   a Python interpreter on the build host. On native Windows MSVC,
#   `python3-dll-a` uses `cc::windows_registry::find` to locate MSVC's
#   `lib.exe` (the same mechanism napi-rs already relies on). On Linux CI
#   cross-compiling to Windows, `python3-dll-a` falls back to
#   `llvm-dlltool` which Ubuntu runners get via `apt-get install llvm` or
#   via PyO3/maturin-action. Industry pattern: polars, pydantic-core,
#   orjson, and PyO3's own abi3 examples all enable this feature.
#
# Do NOT set `[env] PYO3_NO_PYTHON = "1"` in `.cargo/config.toml` to try to
# skip pyo3's Python interpreter probe. On Windows that setting prevents
# pyo3-build-config from emitting the `cargo:rustc-link-search` directive
# that the PE linker needs, and the build fails with LNK1181.
pyo3 = { version = "0.29", features = [
    "abi3-py310",
    "extension-module",
    "generate-import-lib",
] }

# rust-numpy powers the optional numpy=True ndarray return paths on
# Decibri.read and AsyncDecibri.read. Pinned exactly to 0.29.0 because the
# crate's release cadence tracks PyO3 minor versions; this bump is the
# deliberate cross-workflow action paired with the pyo3 0.29 bump (numpy 0.29.0
# depends on pyo3 ^0.29, so the two move together).
numpy = "=0.29.0"

# pyo3-async-runtimes powers the AsyncDecibri / AsyncDecibriOutput surfaces.
# Pinned exactly to 0.29.0 because the crate is young and version drift in the
# absence of a long stability track record is a real risk; this bump is the
# deliberate cross-workflow action paired with the pyo3 0.29 bump (it depends
# on pyo3 ^0.29). The `tokio-runtime` feature selects the Tokio backend; `attributes`
# enables the `#[pyo3_async_runtimes::tokio::main]` macro (we do not currently
# use the macro from a cdylib context, but it is part of the standard feature
# set and inert when unused).
pyo3-async-runtimes = { version = "=0.29.0", features = ["tokio-runtime", "attributes"] }

# tokio is the async runtime that pyo3-async-runtimes drives. Features:
#   - `rt`: the runtime itself (required by pyo3-async-runtimes).
#   - `rt-multi-thread`: the multi-thread executor used for spawn_blocking
#     work; the AsyncDecibri wrapper dispatches the existing GIL-released
#     sync calls through spawn_blocking so they do not block the runtime
#     thread.
#   - `sync`: tokio::sync::Mutex used by the AsyncDecibriBridge /
#     AsyncOutputBridge wrappers around the sync bridges.
#   - `time`: tokio::time::sleep used by the empirical smoke pyfunction in
#     this crate's lib.rs.
#   - `macros`: enables the proc-macro entry points (#[tokio::main] etc.)
#     that pyo3-async-runtimes' attributes feature relies on internally.
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
