[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "decibri"
version = "0.1.0a1"
description = "Cross-platform audio capture, output, and voice activity detection"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Ross Armstrong", email = "hello@decibri.com" },
]
keywords = ["audio", "microphone", "capture", "sound", "voice", "vad"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
]

[project.urls]
Homepage = "https://github.com/decibri/decibri"
Repository = "https://github.com/decibri/decibri"
Issues = "https://github.com/decibri/decibri/issues"
Changelog = "https://github.com/decibri/decibri/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "maturin>=1.13,<2.0",
    "pytest>=9.0,<10.0",
    "mypy>=1.20,<2.0",
    "typing-extensions>=4.15",
]

[tool.maturin]
python-source = "python"
module-name = "decibri._decibri"
bindings = "pyo3"
include = [
    { path = "python/decibri/models/silero_vad.onnx", format = ["sdist", "wheel"] },
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
strict = true
python_version = "3.10"
files = ["python/decibri"]
