[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "decibri"
version = "0.1.0a1"
description = "Cross-platform audio capture, output, and voice activity detection"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Ross Armstrong", email = "hello@decibri.com" },
]
keywords = ["audio", "microphone", "capture", "sound", "voice", "vad"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
]

# Runtime dependencies. typing_extensions is required because
# python/decibri/_classes.py imports `Self` from it for compatibility with
# Python 3.10 (the abi3 floor); typing.Self only exists in 3.11+. The dev
# group below pins the same package for the development environment, but
# that group does not propagate into wheel metadata, so the runtime
# declaration is the one that reaches end users via `pip install decibri`.
dependencies = [
    "typing-extensions>=4.15",
]

[project.urls]
Homepage = "https://github.com/decibri/decibri"
Repository = "https://github.com/decibri/decibri"
Issues = "https://github.com/decibri/decibri/issues"
Changelog = "https://github.com/decibri/decibri/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "maturin>=1.13,<2.0",
    "pytest>=9.0,<10.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.20,<2.0",
    "typing-extensions>=4.15",
]

[tool.maturin]
python-source = "python"
module-name = "decibri._decibri"
bindings = "pyo3"
include = [
    { path = "python/decibri/models/silero_vad.onnx", format = ["sdist", "wheel"] },
    # Per-platform ONNX Runtime dynamic library bundled by python-ci.yml's
    # download/extract step before maturin runs. Wheel-only: the dylib is
    # platform-specific and source distributions must not embed prebuilt
    # binaries. The directory is empty on dev installs (no manual ORT
    # download); tests gated by the requires_bundled_ort marker auto-skip
    # in that case. Glob pattern tolerates auditwheel/delocate hash-suffix
    # renaming applied at wheel-repair time.
    { path = "python/decibri/_ort/*", format = ["wheel"] },
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
strict = true
python_version = "3.10"
files = ["python/decibri"]
