[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "decibri"
version = "0.4.2"
description = "Cross-platform audio capture, playback, and voice activity detection"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Decibri", email = "hello@decibri.com" },
]
keywords = ["audio", "microphone", "capture", "sound", "voice", "vad"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
]

# Runtime dependencies. typing_extensions is required because
# python/decibri/_classes.py imports `Self` from it for compatibility with
# Python 3.10 (the abi3 floor); typing.Self only exists in 3.11+. The dev
# group below pins the same package for the development environment, but
# that group does not propagate into wheel metadata, so the runtime
# declaration is the one that reaches end users via `pip install decibri`.
dependencies = [
    "typing-extensions>=4.15",
]

# numpy is the optional ndarray-support extra. Users who want
# `Decibri(numpy=True)` and `output.write(np_array)` install via
# `pip install decibri[numpy]`. The Rust binary always includes the
# rust-numpy code paths (compile-time gating adds CI complexity for
# negligible binary-size savings); calling `numpy=True` without the
# Python `numpy` package installed raises a clear ImportError at the
# first PyArray construction. Lower bound 1.20 covers the abi3-py310
# baseline and matches industry convention (sounddevice, polars).
[project.optional-dependencies]
numpy = ["numpy>=1.20"]

[project.urls]
Homepage = "https://github.com/decibri/decibri"
Repository = "https://github.com/decibri/decibri"
Issues = "https://github.com/decibri/decibri/issues"
Changelog = "https://github.com/decibri/decibri/blob/main/bindings/python/CHANGELOG.md"

[dependency-groups]
dev = [
    "maturin>=1.13,<2.0",
    "pytest>=9.0,<10.0",
    "pytest-asyncio>=0.24",
    "numpy>=1.20",
    "mypy>=1.20,<2.0",
    "typing-extensions>=4.15",
    # 0.1.3: hypothesis powers the property-based constructor tests in
    # tests/test_microphone_properties.py. Floor 6.0 covers
    # the modern strategy API surface; upper bound left open until a
    # 7.0 release lands and we can re-pin.
    "hypothesis>=6.0",
    # 0.1.3: psutil powers the RSS sampling in tests/test_lifecycle_leak.py.
    # tracemalloc covers Python-allocated memory; psutil covers native
    # allocations (cpal stream buffers, ORT session handles) that
    # tracemalloc cannot see. Both are needed to detect different leak
    # surfaces. Pin matches numpy's lower-bound style (no upper).
    "psutil>=5.9",
]

[tool.maturin]
python-source = "python"
module-name = "decibri._decibri"
bindings = "pyo3"
include = [
    { path = "python/decibri/models/silero_vad.onnx", format = ["sdist", "wheel"] },
    # Per-platform ONNX Runtime dynamic library bundled by python-ci.yml's
    # download/extract step before maturin runs. Wheel-only: the dylib is
    # platform-specific and source distributions must not embed prebuilt
    # binaries. The directory is empty on dev installs (no manual ORT
    # download); tests gated by the requires_bundled_ort marker auto-skip
    # in that case. Glob pattern tolerates auditwheel/delocate hash-suffix
    # renaming applied at wheel-repair time.
    { path = "python/decibri/_ort/*", format = ["wheel"] },
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
strict = true
python_version = "3.10"
files = ["python/decibri"]
