[package]
name = "decibri"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cross-platform audio capture, output, and processing"
keywords = ["audio", "microphone", "capture", "sound", "voice"]
categories = ["multimedia::audio"]

[features]
default = ["capture", "output", "vad", "denoise", "gain"]
capture = ["dep:cpal", "dep:crossbeam-channel"]
output = ["dep:cpal", "dep:crossbeam-channel"]
vad = ["dep:ort"]
denoise = []
gain = []

[dependencies]
cpal = { workspace = true, optional = true }
dasp_sample = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
crossbeam-channel = { workspace = true, optional = true }
ort = { workspace = true, optional = true }
